--- a/src/GithubPortfolio.Web/Pages/Portfolio.razor
+++ b/src/GithubPortfolio.Web/Pages/Portfolio.razor
@@ -93,7 +93,7 @@ else if (_isLoading == false)
         for (int i = 0; i < pagesCount; i++)
         {
             int currentPage = i + 1;
-            repos.AddRange(await githubService.GetUserRepositoriesAsync(Username, currentPage, publicRepos));
+            repos.AddRange(await githubService.GetUserRepositoriesAsync(Username, currentPage, limitItemsSearchGithubApi));
         }
 
         return repos;
