--- a/src/GithubPortfolio.Web/Components/PortfolioHeader.razor.css
+++ b/src/GithubPortfolio.Web/Components/PortfolioHeader.razor.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 4rem;
 }
 
