Change Header and footer Component

--- a/src/GithubPortfolio.Web/Components/PortfolioFooter.razor
+++ b/src/GithubPortfolio.Web/Components/PortfolioFooter.razor
@@ -1,10 +1,9 @@
 ﻿
 <footer>
-    <span>@($"© Copyright 2022, {Name}. All Rights Reserved.")</span>
-    <span>Made with <a href="https://github.com/luizcamargo99/GithubPortfolio" target="_blank" style="color: var(--primaryColor)">Github Portfolio</a> </span>
+    @ChildContent
 </footer>
 
 @code {
     [Parameter]
-    public string Name { get; set; } = string.Empty;
+    public RenderFragment? ChildContent { get; set; }
 }
