--- a/src/GithubPortfolio.Web/_Imports.razor
+++ b/src/GithubPortfolio.Web/_Imports.razor
@@ -13,5 +13,6 @@
 @using GithubPortfolio.Core.Enums
 @using GithubPortfolio.Core.Helpers
 @using GithubPortfolio.Web.Components
+@using GithubPortfolio.Web.Models
 @inject IGithubService githubService
 @inject NavigationManager navigation
