--- a/src/GithubPortfolio.Web/Shared/MainLayout.razor.css
+++ b/src/GithubPortfolio.Web/Shared/MainLayout.razor.css
@@ -4,6 +4,10 @@
     flex-direction: column;
 }
 
+#app {
+    display: block !important;
+}
+
 article {
     display: flex;
     flex-direction: column;
