--- a/src/GithubPortfolio.Web/Pages/Index.razor
+++ b/src/GithubPortfolio.Web/Pages/Index.razor
@@ -26,11 +26,13 @@
     }
 
     button {
-        padding: 0 .5rem;
+        padding: .2rem 1rem;
+        border: none;
+        background: var(--primaryColor);
     }
 
     input {
-        padding: 0 .5rem;
+        padding: .2rem 1rem;
         border: none;
     }
 
@@ -60,7 +62,7 @@
 </div>
 
 <PortfolioFooter>
-    <span>Made with 💚 <a href="https://github.com/luizcamargo99/GithubPortfolio" target="_blank" style="color: var(--primaryColor)">Luiz Camargo</a> </span>
+    <span>Made with 💚 by <a href="https://github.com/luizcamargo99/" target="_blank" style="color: var(--primaryColor)">Luiz Camargo</a> </span>
 </PortfolioFooter>
 
 @code {
