--- a/src/GithubPortfolio.Web/Pages/Index.razor
+++ b/src/GithubPortfolio.Web/Pages/Index.razor
@@ -29,6 +29,7 @@
         padding: .2rem 1rem;
         border: none;
         background: var(--primaryColor);
+        color: #fff;
     }
 
     input {
